Fixes issue introduced in commit c9c42174 in which long site titles may overlap navigation menu drop-downs.

--- a/css/parent-theme-modifications-default.css
+++ b/css/parent-theme-modifications-default.css
@@ -216,7 +216,7 @@ header#site-header:before {
 }
 
 .header-titles {
-	z-index:2;
+	z-index:1;
 }
 
 /* Style site name */
